# isotools

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  VERSION  VERSION.txt  example.py  launch.json  pacbio_bam.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  run_isotools.py  setup.cfg  setup.py  stats.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.rst  isotools.rst  isotoolsAPI.rst  isotoolsCLI.rst  quickstart.rst  requirements.txt  tutorials.rst
docs/notebooks/: 01_prepare_data.ipynb  02_api_vs_cli.ipynb  03_transcriptome_reconstruction.ipynb  03b_transcriptome_import.ipynb  04_saturation_analysis.ipynb  05_qc.ipynb  06_filtering.ipynb  07_file_export.ipynb  08_alternative_splicing.ipynb  09_diff_splice.ipynb  10_domains.ipynb  ENCODE_S2.ipynb  encode_samples.tsv  isotools_alzheimer.ipynb
examples/: isotools_alzheimer.ipynb  isotools_alzheimer.py
isotools/: __init__.py  _gene_plots.py  _transcriptome_filter.py  _transcriptome_io.py  _transcriptome_stats.py  _utils.py  _version.py  altsplice_tests.py  collapse.py  decorators.py  gene.py  io.py  pacbio_bam.py  plots.py  run_isotools.py  short_read.py  splice_graph.py  stats.py  transcriptome.py  utils.py
notebooks/: README.md  illumina_samples.tsv  liver_samples_ERR.tsv  manuscript.ipynb  test_data.ipynb
src/: __init__.py  _gene_plots.py  _utils.py  short_read.py
src/isotools/: __init__.py  _gene_plots.py  _transcriptome_filter.py  _transcriptome_io.py  _transcriptome_stats.py  _utils.py  decorators.py  domains.py  gene.py  plots.py  run_isotools.py  short_read.py  splice_graph.py  transcriptome.py
src/isotools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: altsplice_test.py  altsplice_tests.py  conftest.py  coordination_test.py  data_import_test.py  differential_splicing_test.py  diffsplice_test.py  domain_test.py  splice_graph_test.py  splice_graph_tests.py  test_intron_retention.py  transcriptome_test.py  truncation_tests.py
tests/data/: example.fa  example.fa.fai  example.gff.gz.tbi  example_1_CTL.bam  example_1_CTL.bam.bai  example_1_VPA.bam  example_1_VPA.bam.bai  example_anno_domains.csv  prepare_data.py  sample_table.tsv
