[metadata]
name = isotools
version = file: VERSION.txt
author = Matthias Lienhard
author_email = lienhard@molgen.mpg.de
description = Framework for the analysis of long read transcriptome sequencing data
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
url = https://github.com/MatthiasLienhard/isotools
project_urls =
    Bug Tracker = https://github.com/MatthiasLienhard/isotools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    tqdm
    intervaltree
    matplotlib
    seaborn
    biopython
    pysam
    umap-learn
    sklearn
    scipy
    statsmodels    
[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    run_isotools = isotools.run_isotools:main
      
[options.extras_require]
testing=
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length=160
